Added conclusion section

--- a/LeeStrickland_eda.ipynb
+++ b/LeeStrickland_eda.ipynb
@@ -352,6 +352,20 @@
     "#### Observations:\n",
     "##### As we can see from the bar graph and scatter plot above the USA manufactures more eight cylinder vehicles then both Japan and Europe. Therefore vehicles manufactured in the USA gererally have higher horsepower then those made in Japan and/or Europe for the years 1970 - 1976."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### By looking at the data we have for the miles per gallon of vehicles manufactured between 1970 and 1976 we can see that the majority were made in the USA, had eight cylinders and were not very gas efficient. The high amount of horsepower produced by American made vehicles likely contributed to there low miles per gallon scores."
+   ]
   }
  ],
  "metadata": {
